--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Server-side mob spawn notifier for Veyra game",
   "main": "server.js",
   "engines": {
-    "node": "18.x",
-    "npm": "9.x"
+    "node": "20.x",
+    "npm": "10.x"
   },
   "scripts": {
     "start": "node server.js"
@@ -14,6 +14,6 @@
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
-    "puppeteer": "^21.0.0"
+    "puppeteer-core": "^21.0.0"
   }
 }
