--- a/render.yaml
+++ b/render.yaml
@@ -9,9 +9,7 @@ services:
   envVars:
   - key: DISCORD_WEBHOOK
     sync: false
-  - key: PUPPETEER_EXECUTABLE_PATH
-    value: /usr/bin/chromium-browser
   region: oregon
-  buildCommand: apt-get update && apt-get install -y chromium-browser && npm install
+  buildCommand: npm install
   startCommand: npm start
   autoDeployTrigger: commit
