--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,9 @@ services:
   envVars:
   - key: DISCORD_WEBHOOK
     sync: false
+  - key: PUPPETEER_EXECUTABLE_PATH
+    value: /usr/bin/chromium
   region: oregon
-  buildCommand: npm install
+  buildCommand: apt-get update && apt-get install -y chromium && npm install
   startCommand: npm start
   autoDeployTrigger: commit
