--- a/render.yaml
+++ b/render.yaml
@@ -10,8 +10,8 @@ services:
   - key: DISCORD_WEBHOOK
     sync: false
   - key: PUPPETEER_EXECUTABLE_PATH
-    value: /usr/bin/chromium
+    value: /usr/bin/google-chrome-stable
   region: oregon
-  buildCommand: apt-get update && apt-get install -y chromium && npm install
+  buildCommand: apt-get update && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' | tee /etc/apt/sources.list.d/google-chrome.list && apt-get update && apt-get install -y google-chrome-stable && npm install
   startCommand: npm start
   autoDeployTrigger: commit
