--- a/render.yaml
+++ b/render.yaml
@@ -10,8 +10,8 @@ services:
   - key: DISCORD_WEBHOOK
     sync: false
   - key: PUPPETEER_EXECUTABLE_PATH
-    value: /usr/bin/google-chrome-stable
+    value: /usr/bin/chromium-browser
   region: oregon
-  buildCommand: apt-get update && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' | tee /etc/apt/sources.list.d/google-chrome.list && apt-get update && apt-get install -y google-chrome-stable && npm install
+  buildCommand: apt-get update && apt-get install -y ca-certificates fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libatk1.0-0 libatspi2.0-0 libc6 libcairo-gobject2 libcups2 libdbus-1-3 libdrm2 libgbm1 libgcc-s1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils && apt-get install -y chromium-browser && npm install
   startCommand: npm start
   autoDeployTrigger: commit
