--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,13 @@
-# Exported from Render on 2026-01-05T14:21:03Z
 version: "1"
 services:
 - type: web
   name: general-notification
-  runtime: node
+  runtime: docker
   repo: https://github.com/bad-boy-01/general-notification
   plan: free
   envVars:
   - key: DISCORD_WEBHOOK
     sync: false
-  - key: PUPPETEER_EXECUTABLE_PATH
-    value: /usr/bin/chromium-browser
   region: oregon
-  buildCommand: apt-get update && apt-get install -y ca-certificates fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libatk1.0-0 libatspi2.0-0 libc6 libcairo-gobject2 libcups2 libdbus-1-3 libdrm2 libgbm1 libgcc-s1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils && apt-get install -y chromium-browser && npm install
-  startCommand: npm start
+  dockerfilePath: ./Dockerfile
   autoDeployTrigger: commit
