--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,8 @@ services:
   envVars:
   - key: DISCORD_WEBHOOK
     sync: false
+  - key: PUPPETEER_EXECUTABLE_PATH
+    value: /usr/bin/chromium
   region: oregon
   dockerfilePath: ./Dockerfile
   autoDeployTrigger: commit
