--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "10.x"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npx puppeteer browsers install chrome"
   },
   "dependencies": {
     "axios": "^1.6.0",
