--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "npm": "10.x"
   },
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "npx puppeteer browsers install chrome"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
-    "puppeteer": "^23.0.0"
+    "puppeteer-core": "^23.0.0"
   }
 }
