Update for Render deployment: add buildCommand, clean package.json, fix executablePath, add test webhook button

--- a/render.yaml
+++ b/render.yaml
@@ -10,4 +10,5 @@ services:
     sync: false
   region: oregon
   dockerfilePath: ./Dockerfile
+  buildCommand: apt-get update && apt-get install -y chromium && npm install
   autoDeployTrigger: commit
