--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2",
-    "puppeteer-core": "^23.0.0"
+    "puppeteer-core": "^23.0.0",
+    "express": "^4.19.2"
   }
 }
