--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "puppeteer-core": "^23.0.0",
-    "express": "^4.19.2"
+    "axios": "^1.6.0",
+    "express": "^4.19.2",
+    "puppeteer-core": "^23.0.0"
   }
 }
